tests/ui/parser/raw/raw-byte-string-literals.stderr
error: bare CR not allowed in raw string
  --> $DIR/raw-byte-string-literals.rs:4:9
   |
LL |     br"a";
   |         ^

error: non-ASCII character in raw byte string literal
  --> $DIR/raw-byte-string-literals.rs:5:8
   |
LL |     br"é";
   |        ^ must be ASCII

error: aborting due to 2 previous errors

